# devTools

./: .gitignore  README.md
EncodeDecode/: .gitignore  0821_dataset.tar  ImageEncodeDecode.py  README.md  StructDefine.py  VideoEncodeDecode.py
EncodeDecode/ICER_interface/: CMakeLists.txt  README.md  export.cpp  export_icer.cpp  export_icer.h  main.cpp  manager.cpp  manager.h
EncodeDecode/coin/: encode_decode.py
EncodeDecode/demo/: CMakeLists.txt  receiver.cpp  sender.cpp  socketmanager.cpp  socketmanager.h
EncodeDecode/demo/include/: export_stream.h
EncodeDecode/lossy_autoencoder/: .gitignore  README.md  encode_decode.py  test.py  train.py
EncodeDecode/lossy_autoencoder/model/: Autoencoder.py  Binarizer.py  Decoder.py  Encoder.py  ImgDataset.py  ModelManager.py
EncodeDecode/lossy_autoencoder/utils/: evaluation.py
EncodeDecode/network/: CMakeLists.txt  httpClient.cpp  httpServer.cpp  receiver.cpp  sender.cpp
EncodeDecode/network/sockpp/: CMakeLists.txt
EncodeDecode/network/sockpp/include/sockpp/: export.h
PickColor/: widget.cpp  widget.h
StreamDetectionDemo/: Config.py  InferenceYolo.py  StreamEncodeDecode.py  VisionUtil.py  mainStreamDetect.py
defeatDetection/: .gitignore  VisionTransformer_own.py  config.py  decoder.py  digitcaps.py  encode_decode.py  mdn.py  mvtech.py  ssim.py  test.py  train.py  utils.py  vit.py
imageProcessPy/: EncodeDecode.py  VisionTransformer.py  colorTransfer.py  extractFrame.py  extractLogData.py  feature.py  genDataset.py  genrand.py  grabcut_opencvsample.py  image.c  image.py  imageProcessSimple.py  maskRepair.py  mean.py  model.py  selectImageForTrain.py
lzmaDemo/: CMakeLists.txt  test.cpp
ocr/: ocr.py  timer.py
orin_opencv_gstreamer/: readme.md
orin_opencv_gstreamer/lib/: CMakeLists.txt  HGManager.cpp  HGManager.h  export_stream.cpp  libExport.cpp  libExport.h  main.cpp  stopthread.h
orin_opencv_gstreamer/py/: StreamInC.py
orin_opencv_gstreamer/usage/: CMakeLists.txt  main.cpp  test_stream.cpp
rpcDemo/: CMakeLists.txt  server.cpp
videowriter/: CMakeLists.txt  main.cpp
